--- a/desafios/d012/cordel-moderno.html
+++ b/desafios/d012/cordel-moderno.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-        <a href="https://www.recantodasletras.com.br/poesias/3186743">Por Milton Duarte</a>
+        <h1>
+            Cordel Moderno
+        </h1>
+        <p>
+                <a href="https://www.recantodasletras.com.br/poesias/3186743">Por Milton Duarte</a>
+        </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +29,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,7 +41,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             <p>
                 Arroba agora não pesa <br>
@@ -61,7 +65,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
         Mandava no mês de Junho <br>
@@ -71,7 +75,7 @@
         Nas linhas do coração. <br>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
