--- a/desafios/d012/cordel-moderno.html
+++ b/desafios/d012/cordel-moderno.html
@@ -29,7 +29,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -54,25 +54,27 @@
             </p>
 
             <p>
-                Pra piorar a liguagem <br>
-                O emoticom é um risco <br>
-                Tem símbolo para tudo <br>
-                Ponto e vírgula e um asterisco <br>
-                Um beijo significa <br>
-                Pra entender como fica <br>
-                Decifre esse rabisco. <br>
-            </p>
+            Pra piorar a liguagem <br>
+            O emoticom é um risco <br>
+            Tem símbolo para tudo <br>
+            Ponto e vírgula e um asterisco<br>
+            Um beijo significa <br>
+            Pra entender como fica <br>
+            Decifre esse rabisco. <br>
         </p>
-    </section>
+        
+        </section>
 
-    <section class="imagem">
-        Tenho saudade das cartas <br>
-        Escritas com a própria mão <br>
-        Mandava no mês de Junho <br>
-        Só chegava no Verão <br>
-        Mas matava a saudade <br>
-        Era texto de verdade <br>
-        Nas linhas do coração. <br>
+    <section class="imagem" id="img02">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração. <br>
+        </p>
     </section>
 
     <section class="normal">
