mudei os desafios

--- a/desafios/d012/cordel-moderno.html
+++ b/desafios/d012/cordel-moderno.html
@@ -101,7 +101,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="http://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara </a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por Miguel Araujo Silva para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
     </footer>
 
 </body>
