--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos esse, explicabo consectetur temporibus nostrum voluptates perferendis libero asperiores ipsam voluptatibus, quasi architecto ducimus. Cumque dolore blanditiis nihil nam qui dignissimos! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia, sit obcaecati unde impedit alias optio est blanditiis adipisci at accusantium reiciendis excepturi? Omnis dolore, ipsam iste maxime repudiandae corrupti impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis similique ipsam quia repudiandae dolores mollitia aperiam placeat, voluptatem, expedita ratione exercitationem perferendis vitae assumenda sit eaque voluptatibus at quidem eveniet.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius optio reprehenderit ducimus atque veniam quaerat magnam. Repellat, maiores? Quod necessitatibus facere in quo repellendus earum cupiditate. Ut ipsum unde eligendi? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, expedita voluptatibus provident necessitatibus molestiae error incidunt voluptate magnam a neque cumque ullam eos, soluta praesentium. Hic ducimus laboriosam consequuntur velit?</p>">
         <p>Infelismente seu navegador não é compativel com isso.</p>
     </iframe>
     
